Development and Production created

--- a/Presentation/CleanCqrs.WepApi/Properties/launchSettings.json
+++ b/Presentation/CleanCqrs.WepApi/Properties/launchSettings.json
@@ -9,14 +9,26 @@
     }
   },
   "profiles": {
-    "http": {
+    "OnionCQRSDevelopment": {
+
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5069",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "OnionCQRSProduction": {
+
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5050",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "https": {
