--- a/Presentation/CleanCqrs.WepApi/CleanCqrs.WepApi.csproj
+++ b/Presentation/CleanCqrs.WepApi/CleanCqrs.WepApi.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\CleanCqrs.Persistence\CleanCqrs.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
