--- a/Presentation/CleanCqrs.WepApi/appsettings.Development.json
+++ b/Presentation/CleanCqrs.WepApi/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=.;Database=YoutubeApi;Trusted_Connection=True;TrustServerCertificate=true;"
+
+    "DefaultConnection": "Server=YSF\\SQLEXPRESS;Database=E-ComBasic;Trusted_Connection=True;TrustServerCertificate=true;"
+
 
   }
 }
