--- a/Core/CleanCqrs.Application/CleanCqrs.Application.csproj
+++ b/Core/CleanCqrs.Application/CleanCqrs.Application.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CleanCqrs.Domain\CleanCqrs.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Products\Command\" />
   </ItemGroup>
 
 </Project>
